content/_generated-doc/3.8/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc

:summaryTableId: quarkus-grpc-config-group-config-grpc-client-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-configures-the-grpc-clients]]link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-configures-the-grpc-clients[Configures the gRPC clients]

h|Type
h|Default

a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-use-quarkus-grpc-client]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-use-quarkus-grpc-client[quarkus.grpc.clients."client-name".use-quarkus-grpc-client]`


[.description]
--
Use new Vert.x gRPC client support. By default, we still use previous Java gRPC support.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USE_QUARKUS_GRPC_CLIENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USE_QUARKUS_GRPC_CLIENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-enabled]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-enabled[quarkus.grpc.clients."client-name".xds.enabled]`


[.description]
--
Explicitly enable use of XDS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-secure]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-secure[quarkus.grpc.clients."client-name".xds.secure]`


[.description]
--
Use secure credentials.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-target]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-xds-target[quarkus.grpc.clients."client-name".xds.target]`


[.description]
--
Optional explicit target.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__XDS_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-in-process-enabled]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-in-process-enabled[quarkus.grpc.clients."client-name".in-process.enabled]`


[.description]
--
Explicitly enable use of in-process.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IN_PROCESS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IN_PROCESS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-in-process-name]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-in-process-name[quarkus.grpc.clients."client-name".in-process.name]`


[.description]
--
Set in-process name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IN_PROCESS_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IN_PROCESS_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus-grpc`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-threads]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-threads[quarkus.grpc.clients."client-name".stork.threads]`


[.description]
--
Number of threads on a delayed gRPC ClientCall

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_THREADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_THREADS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-deadline]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-deadline[quarkus.grpc.clients."client-name".stork.deadline]`


[.description]
--
Deadline in milliseconds of delayed gRPC call

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_DEADLINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_DEADLINE+++`
endif::add-copy-button-to-env-var[]
--|long 
|`5000`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-retries]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-retries[quarkus.grpc.clients."client-name".stork.retries]`


[.description]
--
Number of retries on a gRPC ClientCall

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_RETRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_RETRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-delay]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-delay[quarkus.grpc.clients."client-name".stork.delay]`


[.description]
--
Initial delay in seconds on refresh check

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_DELAY+++`
endif::add-copy-button-to-env-var[]
--|long 
|`60`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-period]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-stork-period[quarkus.grpc.clients."client-name".stork.period]`


[.description]
--
Refresh period in seconds

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__STORK_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|long 
|`120`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-port]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-port[quarkus.grpc.clients."client-name".port]`


[.description]
--
The gRPC service port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9000`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-test-port]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-test-port[quarkus.grpc.clients."client-name".test-port]`


[.description]
--
The gRPC service test port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-host]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-host[quarkus.grpc.clients."client-name".host]`


[.description]
--
The host name / IP on which the service is exposed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`localhost`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-certificate]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-certificate[quarkus.grpc.clients."client-name".ssl.certificate]`


[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-key]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-key[quarkus.grpc.clients."client-name".ssl.key]`


[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_KEY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-trust-store]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-ssl-trust-store[quarkus.grpc.clients."client-name".ssl.trust-store]`


[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or in an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__SSL_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-name-resolver]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-name-resolver[quarkus.grpc.clients."client-name".name-resolver]`


[.description]
--
Use a name resolver. Defaults to dns. If set to "stork", host will be treated as SmallRye Stork service name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NAME_RESOLVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NAME_RESOLVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`dns`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-plain-text]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-plain-text[quarkus.grpc.clients."client-name".plain-text]`


[.description]
--
Whether `plain-text` should be used instead of `TLS`. Enabled by default, except if TLS/SSL is configured. In this case, `plain-text` is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-time]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-time[quarkus.grpc.clients."client-name".keep-alive-time]`


[.description]
--
The duration after which a keep alive ping is sent.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-flow-control-window]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-flow-control-window[quarkus.grpc.clients."client-name".flow-control-window]`


[.description]
--
The flow control window in bytes. Default is 1MiB.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__FLOW_CONTROL_WINDOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__FLOW_CONTROL_WINDOW+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-idle-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-idle-timeout[quarkus.grpc.clients."client-name".idle-timeout]`


[.description]
--
The duration without ongoing RPCs before going to idle mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-timeout[quarkus.grpc.clients."client-name".keep-alive-timeout]`


[.description]
--
The amount of time the sender of a keep alive ping waits for an acknowledgement.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-without-calls]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-keep-alive-without-calls[quarkus.grpc.clients."client-name".keep-alive-without-calls]`


[.description]
--
Whether keep-alive will be performed when there are no outstanding RPC on a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_WITHOUT_CALLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__KEEP_ALIVE_WITHOUT_CALLS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-hedged-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-hedged-attempts[quarkus.grpc.clients."client-name".max-hedged-attempts]`


[.description]
--
The max number of hedged attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_HEDGED_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_HEDGED_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-retry-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-retry-attempts[quarkus.grpc.clients."client-name".max-retry-attempts]`


[.description]
--
The max number of retry attempts. Retry must be explicitly enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_RETRY_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_RETRY_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-trace-events]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-trace-events[quarkus.grpc.clients."client-name".max-trace-events]`


[.description]
--
The maximum number of channel trace events to keep in the tracer for each channel or sub-channel.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_TRACE_EVENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_TRACE_EVENTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-inbound-message-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-inbound-message-size[quarkus.grpc.clients."client-name".max-inbound-message-size]`


[.description]
--
The maximum message size allowed for a single gRPC frame (in bytes). Default is 4 MiB.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_MESSAGE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_MESSAGE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-inbound-metadata-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-max-inbound-metadata-size[quarkus.grpc.clients."client-name".max-inbound-metadata-size]`


[.description]
--
The maximum size of metadata allowed to be received (in bytes). Default is 8192B.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_METADATA_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__MAX_INBOUND_METADATA_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-negotiation-type]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-negotiation-type[quarkus.grpc.clients."client-name".negotiation-type]`


[.description]
--
The negotiation type for the HTTP/2 connection. Accepted values are: `TLS`, `PLAINTEXT_UPGRADE`, `PLAINTEXT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NEGOTIATION_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__NEGOTIATION_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`TLS`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-override-authority]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-override-authority[quarkus.grpc.clients."client-name".override-authority]`


[.description]
--
Overrides the authority used with TLS and HTTP virtual hosting.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__OVERRIDE_AUTHORITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__OVERRIDE_AUTHORITY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-per-rpc-buffer-limit]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-per-rpc-buffer-limit[quarkus.grpc.clients."client-name".per-rpc-buffer-limit]`


[.description]
--
The per RPC buffer limit in bytes used for retry.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PER_RPC_BUFFER_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__PER_RPC_BUFFER_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-retry]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-retry[quarkus.grpc.clients."client-name".retry]`


[.description]
--
Whether retry is enabled. Note that retry is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-retry-buffer-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-retry-buffer-size[quarkus.grpc.clients."client-name".retry-buffer-size]`


[.description]
--
The retry buffer size in bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__RETRY_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-user-agent]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-user-agent[quarkus.grpc.clients."client-name".user-agent]`


[.description]
--
Use a custom user-agent.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-load-balancing-policy]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-load-balancing-policy[quarkus.grpc.clients."client-name".load-balancing-policy]`


[.description]
--
Use a custom load balancing policy. Accepted values are: `pick_first`, `round_robin`, `grpclb`. This value is ignored if name-resolver is set to 'stork'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__LOAD_BALANCING_POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__LOAD_BALANCING_POLICY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`pick_first`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-compression]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-compression[quarkus.grpc.clients."client-name".compression]`


[.description]
--
The compression to use for each call. The accepted values are `gzip` and `identity`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-deadline]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus-grpc-clients-client-name-deadline[quarkus.grpc.clients."client-name".deadline]`


[.description]
--
The deadline used for each call.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__DEADLINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_CLIENTS__CLIENT_NAME__DEADLINE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
